# sgxv2-analytical-query-processing-benchmarks

./: LICENSE  README.md
Join-Benchmarks/: .clang-format  .gitignore  CMakeLists.txt  README.md
Join-Benchmarks/App/TEEBench/: App.cpp  native.cpp
Join-Benchmarks/App/TpcH/: CSVConvert.cpp  TpcHApp.cpp  TpcHCommons.cpp  TpcHCommons.hpp  TpcHNative.cpp  create_binary_tables.sh
Join-Benchmarks/Enclave/: Enclave.config.xml  Enclave.edl  Enclave10GB.config.xml  Enclave11GB.config.xml  Enclave128MB.config.xml  Enclave12GB.config.xml  Enclave16GB.config.xml  Enclave192MB.config.xml  Enclave1GB.config.xml  Enclave1GBDyn.config.xml  Enclave2GB.config.xml  Enclave2GBDyn.config.xml  Enclave32GB.config.xml  Enclave4GB.config.xml  Enclave4GBDyn.config.xml  Enclave6GB.config.xml  Enclave8GB.config.xml  TpcHECalls.cpp  secure_joins.cpp
Join-Benchmarks/SGXv2Scripts/data/: RHO-phases.csv  full-query-optimization-impact.csv  intro.csv  join-overview.csv  mutex-contention.csv  random-access-pht.csv  rho-numa.csv  scaling-perf.csv  skew.csv  slow-malloc.csv  unroll-reorder-improvements-mitigation.csv  unroll-reorder-improvements.csv
Join-Benchmarks/SGXv2Scripts/scripts/: compare-overview-sgxv1.py  full-queries.py  in-depth-join-overheads.py  in-depth-radix-join-overheads.py  join-throughput-overview.py  mutex-overhead.py  mutex-paritioning-overhead.py  no-part-investigation.py  old-intro-figure.py  optimization-impact-exp.py  paper-0-intro.py  paper-1-join-algorithm-overview.py  paper-2-random-memory-access-pht.py  paper-3-RHO-phases.py  paper-4-rho-numa.py  paper-4-scaling.py  paper-5-rho-numa.py  paper-6-mutex-contention.py  paper-7-slow-malloc.py  paper-8-full-query-optimization-impact.py  paper-9-unroll-reorder-improvements.py  paper-revision-9-skew.py  partition-size-exp.py  pht-unroll-factors.py  plot-all.sh  q3-opt-effects.py  radix-all-improvements.py  rho-materialization.py  run-all.sh  scale-r-s.py  unroll-optimization.py  unroll-reorder-improvements.py
Join-Benchmarks/SGXv2Scripts/scripts/helpers/: commons.py  runner.py  tpch_runner.py
Join-Benchmarks/cmake/: FindSGX.cmake
Join-Benchmarks/lib/: CMakeLists.txt
Join-Benchmarks/lib/AppUtilities/: CMakeLists.txt
Join-Benchmarks/lib/AppUtilities/include/: commons.h
Join-Benchmarks/lib/AppUtilities/src/: ErrorSupport.cpp  commons.cpp  generator.cpp  genzipf.cpp  parallel_sort.cpp
Join-Benchmarks/lib/EnclavePrint/: CMakeLists.txt
Join-Benchmarks/lib/EnclavePrint/interface/: EnclavePrint.edl
Join-Benchmarks/lib/Joins/: CMakeLists.txt
Join-Benchmarks/lib/Joins/include/: ChunkedTable.hpp  joins.hpp  util.hpp
Join-Benchmarks/lib/Joins/src/: ChunkedTable.cpp  joins.cpp  util.cpp
Join-Benchmarks/lib/Logger/: CMakeLists.txt
Join-Benchmarks/lib/Logger/include/: Logger.hpp  LoggerTypes.hpp
Join-Benchmarks/lib/Logger/src/: Logger.cpp
Join-Benchmarks/lib/OCalls/: CMakeLists.txt
Join-Benchmarks/lib/OCalls/include/: ocalls.hpp
Join-Benchmarks/lib/OCalls/include_t/: ocalls_t.h
Join-Benchmarks/lib/OCalls/interface/: ocalls.edl
Join-Benchmarks/lib/OCalls/src/: cpu_mapping.cpp  ocalls.cpp
Join-Benchmarks/lib/PerfEvent/: CMakeLists.txt
Join-Benchmarks/lib/PerfEvent/include/: PerfEvent.hpp
Join-Benchmarks/lib/SharedHeaders/: CMakeLists.txt
Join-Benchmarks/lib/SharedHeaders/include/: Barrier.hpp  TpcHTypes.hpp  barrier.h  data-types.h  rdtscpWrapper.h
Join-Benchmarks/lib/TPCH-Queries/: CMakeLists.txt
Join-Benchmarks/lib/TPCH-Queries/include/: tpch.hpp
Join-Benchmarks/lib/TPCH-Queries/src/: Q10Predicates.hpp  Q12Predicates.hpp  Q19Predicates.hpp  Q3Predicates.hpp  filters.hpp  result_transformers.cpp  result_transformers.hpp  time_print.cpp  time_print.hpp  tpch.cpp
Join-Benchmarks/lib/x86-simd-sort/: CMakeLists.txt
Join-Benchmarks/lib/x86-simd-sort/include/: avx512-common-qsort.h
Join-Benchmarks/lib/x86-simd-sort/simd-headers/: avx512cdintrin.h  avx512dqintrin.h  avx512fintrin.h  avx512vbmi2intrin.h  avx512vbmiintrin.h  avx512vldqintrin.h  avx512vlintrin.h  smmintrin.h
Scan-Micro-Benchmarks/: CMakeLists.txt  README.md  requirements.txt
Scan-Micro-Benchmarks/cmake/: FindSGX.cmake
Scan-Micro-Benchmarks/microbenchmarks/: CMakeLists.txt
Scan-Micro-Benchmarks/microbenchmarks/PMBW/: CMakeLists.txt  run_pmbw.sh  run_pmbw_pointer_chasing.sh
Scan-Micro-Benchmarks/microbenchmarks/PMBW/App/: App.cpp
Scan-Micro-Benchmarks/microbenchmarks/PMBW/Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl  structs.h
Scan-Micro-Benchmarks/microbenchmarks/PMBW/incl/: funcs_x86_64.h
Scan-Micro-Benchmarks/microbenchmarks/PMBW/results/: .gitignore  0_pmbw_linear.sh  1_pmbw_random.sh  plot.py  pmbw_convert_csv.py  pmbw_plot.py
Scan-Micro-Benchmarks/microbenchmarks/RadixPartitioning/: CMakeLists.txt
Scan-Micro-Benchmarks/microbenchmarks/RadixPartitioning/App/: App.cpp  EnclaveInit.hpp  Histogram.cpp  Logger.cpp  OCalls.cpp  Simple.cpp
Scan-Micro-Benchmarks/microbenchmarks/RadixPartitioning/Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl
Scan-Micro-Benchmarks/microbenchmarks/RadixPartitioning/Shared/: RNG.cpp  RNG.hpp  algorithms.hpp  avx_includes.hpp  histogram_algorithms.cpp  histogram_algorithms.hpp  partitioning_algorithms.cpp  partitioning_algorithms.hpp  simple_algorithms.cpp  simple_algorithms.hpp  types.hpp
Scan-Micro-Benchmarks/microbenchmarks/RadixPartitioning/results/: 0_histogram.sh  1_simple.sh  exp-histogram-calls.sh  plot.py  run_multi_hist.sh
Scan-Micro-Benchmarks/microbenchmarks/SimdScanMulti/: CMakeLists.txt
Scan-Micro-Benchmarks/microbenchmarks/SimdScanMulti/App/: App.cpp  Logger.cpp  Logger.hpp  OCalls.cpp  flags.hpp  multithreadedscan.cpp  multithreadedscan.hpp  multithreadscan_utils.cpp  multithreadscan_utils.hpp  types.cpp  types.hpp
Scan-Micro-Benchmarks/microbenchmarks/SimdScanMulti/Enclave/: Enclave.config.xml  (+2 more)
Scan-Micro-Benchmarks/microbenchmarks/Sort/: CMakeLists.txt
Scan-Micro-Benchmarks/microbenchmarks/WriteBench/: CMakeLists.txt
Scan-Micro-Benchmarks/shared_libraries/: CMakeLists.txt
Scan-Micro-Benchmarks/shared_libraries/SimdScan/: CMakeLists.txt
(+150 files in other folders)
